--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "NodeJS",
+  "name": "nodejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "NodeJS learning in IMT",
   "main": "index.js",
   "scripts": {
     "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "thejustedd",
   "license": "ISC",
   "dependencies": {
+    "emojer.js": "^1.3.3",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.11",
+    "socket.io": "^2.1.0"
   }
 }
