--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "thejustedd",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "emojer.js": "^1.3.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.11",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "sqlite": "^2.9.1"
   }
 }
