--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "delivery": "0.0.6",
     "emojer.js": "^1.3.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
